# note-tree.nvim

./: .gitignore  Cargo.toml  Makefile  README.md
crates/note_tree/: Cargo.toml
crates/note_tree/src/: lib.rs
crates/tree_builder/: Cargo.toml
crates/tree_builder/src/: lib.rs
lua/integrate/: telescope.lua
lua/note-tree/: commands.lua  defalut.lua  init.lua
lua/utils/: get_graph.lua  note_sketch.lua  tree_builder.lua
plugin/: note-tree.nvim.lua
