[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
note_tree = { path = "crates/tree_builder" }
minijinja = { version = "2.4.0", features = [
  "loader",
  "json",
  "fuel",
  "unicode",
  "speedups",
  "custom_syntax",
  "loop_controls",
] }
mlua = { version = "0.10.0", features = ["module", "serialize"] }
serde = { version = "1.0.209", features = ["derive"] }
