[lib]
name = "tree_builder"
crate-type = ["cdylib"]

[package]
name = "tree_builder"
version = "0.1.0"
edition = "2021"

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"] 
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]

[dependencies]
fnv = "1.0.7"
lazy_static = "1.5.0"
memchr = "2.5.0"
regex = "1.9.1"
mlua = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
